--- a/submissions/dissertation/bibliography.bib
+++ b/submissions/dissertation/bibliography.bib
@@ -1,56 +1,56 @@
 @misc{Hunchentoot,
   title = {{Hunchentoot: The Common Lisp web server formerly known as TBNL}},
   howpublished =
-  {\url{https://edicl.github.io/hunchentoot/}},
+  {https://edicl.github.io/hunchentoot/},
   note = {Accessed: 2020-09-04}
 }
 
 @misc{Quicklisp,
   title = {Quicklisp beta},
   howpublished =
-  {\url{https://www.quicklisp.org/beta/}},
+  {https://www.quicklisp.org/beta/},
   note = {Accessed: 2020-09-04}
 }
 
 @misc{CL-WHO,
   title = {{CL-WHO - Yet another Lisp markup language}},
   howpublished =
-  {\url{https://edicl.github.io/cl-who/}},
+  {https://edicl.github.io/cl-who/},
   note = {Accessed: 2020-09-04}
 }
 
 @misc{Mito,
   title = {The Mito reference manual},
   howpublished =
-  {\url{https://quickref.common-lisp.net/mito.html#Introduction}},
+  {https://quickref.common-lisp.net/mito.html},
   note = {Accessed: 2020-09-04}
 }
 
 @misc{SXQL,
   title = {The SXQL reference manual},
   howpublished =
-  {\url{https://quickref.common-lisp.net/sxql.html}},
+  {https://quickref.common-lisp.net/sxql.html},
   note = {Accessed: 2020-09-04}
 }
 
 @misc{Parenscript,
   title = {Parenscript},
   howpublished =
-  {\url{https://common-lisp.net/project/parenscript/}},
+  {https://common-lisp.net/project/parenscript/},
   note = {Accessed: 2020-09-04}
 }
 
 @misc{Smackjack,
   title = {The Smackjack reference manual},
   howpublished =
-  {\url{https://quickref.common-lisp.net/smackjack.html}},
+  {https://quickref.common-lisp.net/smackjack.html},
   note = {Accessed: 2020-09-04}
 }
 
 @misc{ngrok,
   title = {Ngrok},
   howpublished =
-  {\url{https://ngrok.com/}},
+  {https://ngrok.com/},
   note = {Accessed: 2020-09-04}
 }
 
@@ -143,7 +143,7 @@
   title = {This new blockchain-based betting platform could cause Napster-size
 	  legal headaches},
   howpublished =
-  {\url{https://www.technologyreview.com/2018/08/02/240354/this-new-ethereum-based-assassination-market-platform-could-cause-napster-size-legal/}},
+  {https://www.technologyreview.com/2018/08/02/240354/this-new-ethereum-based-assassination-market-platform-could-cause-napster-size-legal/},
   note = {Accessed: 2020-08-27}
 }
 
@@ -237,48 +237,48 @@
 
 @misc{Predictalot,
   title = {{Predictalot!} (and we mean a lot)},
-  howpublished = {\url{http://blog.oddhead.com/2010/03/05/predictalot/}},
+  howpublished = {http://blog.oddhead.com/2010/03/05/predictalot/},
   note = {Accessed: 2020-02-16}
 }
 
 @misc{Gnosis,
   title = {Gnosis},
-  howpublished = {\url{https://gnosis.io/}},
+  howpublished = {https://gnosis.io/},
   note = {Accessed: 2020-04-16}
 }
 
 @misc{Omen,
   title = {Omen},
-  howpublished = {\url{https://omen.eth.link/}},
+  howpublished = {https://omen.eth.link/},
   note = {Accessed: 2020-08-28}
 }
 
 @misc{InTrade,
   title = {{InTrade}},
-  howpublished = {\url{https://intrade.com/}},
+  howpublished = {https://intrade.com/},
   note = {Accessed: 2020-08-28}
 }
 @misc{Hivemind,
   title = {Hivemind},
-  howpublished = {\url{https://hvmd.io/}},
+  howpublished = {https://hvmd.io/},
   note = {Accessed: 2020-04-16}
 }
 
 @misc{PredictIt,
   title = {PredictIt},
-  howpublished = {\url{https://www.predictit.org}},
+  howpublished = {https://www.predictit.org},
   note = {Accessed: 2020-02-16}
 }
 
 @misc{Augur,
   title = {{Augur:} the world's most accessible, no-limit betting platform.},
-  howpublished = {\url{https://www.augur.net}},
+  howpublished = {https://www.augur.net},
   note = {Accessed: 2020-02-16}
 }
 
 @misc{IEM,
   title = {{IEM}: {Iowa Electronic Markets}},
-  howpublished = {\url{https://iemweb.biz.uiowa.edu}},
+  howpublished = {https://iemweb.biz.uiowa.edu},
   note = {Accessed: 2020-02-16}
 }
 
@@ -328,13 +328,13 @@
 
 @misc{assassinationMarkets,
   title = {Assassination market},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Assassination_market}},
+  howpublished = {https://en.wikipedia.org/wiki/Assassination_market},
   note = {Accessed: 2020-06-06}
 }
 
 @misc{crowdfundingMurder,
   title = {{Meet the `Assassination Market' Creator Who's Crowdfunding Murder
 	  with Bitcoins}},
-  howpublished = {\url{https://www.forbes.com/sites/andygreenberg/2013/11/18/meet-the-assassination-market-creator-whos-crowdfunding-murder-with-bitcoins/}},
+  howpublished = {https://www.forbes.com/sites/andygreenberg/2013/11/18/meet-the-assassination-market-creator-whos-crowdfunding-murder-with-bitcoins/},
   note = {Accessed: 2020-06-06}
 }
