--- a/submissions/dissertation/dissertation.tex
+++ b/submissions/dissertation/dissertation.tex
@@ -95,7 +95,7 @@
 
         \vspace*{1cm}
 		{\Large \textsc{A Decentralised Peer-Prediction Market}} \\
-		{\textsc{CS907 Dissertation Project - Dissertation}}
+		{\textsc{CS907 Dissertation Project - Final Report}}
 
         \vspace*{1cm}
         \textbf{Thomas Archbold} \\
