--- a/submissions/dissertation/sections/implementation.tex
+++ b/submissions/dissertation/sections/implementation.tex
@@ -278,7 +278,7 @@ than the size of their short position.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{trade}
-	\caption{User's can trade in active markets or report on those that have
+	\caption{Users can trade in active markets or report on those that have
 	expired}
 	\label{fig:trade}
 \end{figure}
