--- a/submissions/dissertation/sections/management.tex
+++ b/submissions/dissertation/sections/management.tex
@@ -17,7 +17,7 @@ versions of the project if the current one is broken by a new feature.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{commits}
-	\caption{Weekly commits to Github}
+	\caption{Commits to Github}
 	\label{fig:commits}
 \end{figure}
 
